--- a/assets/evil-icons.scss
+++ b/assets/evil-icons.scss
@@ -21,38 +21,40 @@
   overflow: hidden;
   fill: currentColor;
 
-  &.icon-sm {
+  &[data-icon-size=sm] {
     width: 50px;
     height: 50px;
   }
 
-  &.icon-sl {
+  &[data-icon-size=lg] {
     width: 100px;
     height: 100px;
   }
 
-  &.icon--xl {
+  &[data-icon-size=xl] {
     width: 150px;
     height: 150px;
   }
 
-  &.icon--xxl {
+  &[data-icon-size=xxl] {
     width: 200px;
     height: 200px;
   }
 
-  &.icon--spinner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  &.spinner {
+    .icon--wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
 
-    -webkit-animation: evilicon-spinner 1s steps(12) infinite;
-            animation: evilicon-spinner 1s steps(12) infinite;
+      -webkit-animation: evilicon-spinner 1s steps(12) infinite;
+              animation: evilicon-spinner 1s steps(12) infinite;
+    }
   }
 
-  .icon__cnt {
+  .icon--cnt {
     width: 100%;
     height: 100%;
     background: inherit;
