--- a/assets/evil-icons.scss
+++ b/assets/evil-icons.scss
@@ -16,24 +16,39 @@
 [data-icon] {
   position: relative;
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 0;
+  height: 0;
   overflow: hidden;
   fill: currentColor;
 
+  &[data-icon-size=xsm] {
+    width: 8px;
+    height: 8px;
+  }
+
   &[data-icon-size=sm] {
+    width: 12px;
+    height: 12px;
+  }
+
+  &[data-icon-size=m] {
+    width: 18px;
+    height: 18px;
+  }
+
+  &[data-icon-size=md] {
     width: 50px;
     height: 50px;
   }
 
   &[data-icon-size=lg] {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
   }
 
   &[data-icon-size=xl] {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
   }
 
   &[data-icon-size=xxl] {
