--- a/assets/purpur.scss
+++ b/assets/purpur.scss
@@ -68,6 +68,7 @@
   .icon--cnt {
     width: 100%;
     height: 100%;
+    margin-left: 1px;
     background: inherit;
     fill: inherit;
     position: absolute;
