--- a/assets/purpur.js.erb
+++ b/assets/purpur.js.erb
@@ -10,7 +10,7 @@
 
   window.purpur = {
 
-    tmpl: '<span class="icon" data-icon="{{iconName}}-icon" data-icon-size="{{iconSize}}"><span class="icon--wrapper"><svg class="icon--cnt"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{assetPath}}#{{iconName}}" x="0" y="0"></use></svg></span></span>',
+    tmpl: '<span class="icon" data-icon="{{iconName}}" data-icon-size="{{iconSize}}"><span class="icon--wrapper"><svg class="icon--cnt"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{assetPath}}#{{iconName}}-icon" x="0" y="0"></use></svg></span></span>',
 
     template: function(options) {
       var result = "" + this.tmpl;
